--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,6 +23,7 @@ button {
     align-items: center;
     justify-content: center;
     line-height: 18px;
+    padding: 5px 0;
 }
 
 .header_horarios p {
@@ -73,7 +74,9 @@ button {
     background-color: transparent;
     color: white;
     margin-left: 20px;
-    
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .header_banner_sub_login img {
@@ -99,6 +102,7 @@ button {
     justify-content: space-between;
     list-style: none;
     color: #173083;
+    align-items: center;
 }
 
 .header_navbar_nav_ul_item a {
