--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,6 @@
     padding: 0;
     margin: 0;
     font-family: 'Oswald', sans-serif;
-
 }
 
 button {
@@ -24,13 +23,13 @@ button {
     justify-content: center;
     line-height: 18px;
     padding: 5px 0;
+    font-size: 16px;
 }
 
 .header_horarios p {
     text-align: center;
     margin-left: 20px;
     margin-right: 20px;
-
 }
 
 .header_banner_color {
@@ -58,6 +57,7 @@ button {
 .header_banner_sub_delivery {
     color: white;
     margin-left: 20px;
+    font-size: 16px;
 }
 
 .header_banner_sub_delivery img {
@@ -77,6 +77,7 @@ button {
     display: flex;
     align-items: center;
     gap: 5px;
+    font-size: 16px;
 }
 
 .header_banner_sub_login img {
@@ -121,6 +122,7 @@ button {
     background-color: #FBB905;
     border-radius: 35px;
     padding: 5px 30px 5px 30px;
+    font-size: 16px;
 }
 
 .header_navbar_nav_ul_order span {
