--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap');
+
 *, *::after, *::before{
     padding: 0;
     margin: 0;
@@ -27,4 +29,5 @@ img{
 button{
     cursor: pointer;
     border: none;
+    font-family:'Oswald', sans-serif;
 }
