--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
     --color-primario: #011689;
     --color-base: #173083;
     --color-secundario: #FBB905;
-    --color-rojo-primario: E10B19;
+    --color-rojo-primario: #E10B19;
 }
 
 html {
