--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -88,9 +88,9 @@ header {
 .header_navbar_list{
     display: none;
     align-items: center;
-    gap: 20px;
-    padding: 20px 10px 20px 0;
+    padding: 0 74px 0 0;
     justify-content: space-between;
+    flex: 1;
 }
 @media ( min-width: 1024px  ) {
     .header_navbar_list{
