--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -4,7 +4,7 @@
     min-height: 300px;
     height: 100%;
     border: 3px solid #fff;
-    margin: 0 auto;
+    max-width: 300px;
 }
 .promocion_nombre{
     color: #030819;
