--- a/src/views/Promotions/promotions.css
+++ b/src/views/Promotions/promotions.css
@@ -1,27 +1,151 @@
-.promotions{
-    padding-top: 220px;
+.promotions {
+  padding-top: 220px;
 }
 
 .promotions__button {
-    padding: 10px 20px;
-
+  padding: 10px 20px;
 }
 
-.promotion-content{
-
+.promotions__heading {
+  text-transform: uppercase;
+  padding: 20px 0 0 0;
+  font-weight: 500;
+  font-size: 28px;
 }
 
-.promotion-content__text{
-
+.separador {
+  width: 100%;
+  border-top: 1px solid black;
+  margin: 15px 0 25px 0;
+}
+.promo {
+  padding-top: 15px;
+}
+.promo__heading {
+  font-size: 24px;
+  padding: 15px 0;
+  color: var(--color-primario);
+}
+.promo__content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  gap: 15px;
+  padding-bottom: 20px;
+}
+.promo__content img {
+  border-radius: 24px;
+  width: 100%;
+  object-fit: cover;
 }
 
-.promotion-content__imagen{
-
+.promo__content img:nth-child(3) {
+  grid-column: 1 / 3;
+}
+.last-bembos {
+  padding: 10px 0;
+}
+.last-bembos__heading {
+  font-size: 24px;
+  color: var(--color-primario);
+  padding: 15px 0;
+}
+.features__grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+.features__heading {
+  font-size: 24px;
+  color: var(--color-primario);
+  padding: 15px 0;
+  text-align: center;
+}
+.feature {
+  padding: 25px 0;
+  border-radius: 18px;
+  background-color: var(--color-secundario);
+  color: var(--color-primario);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+}
+.feature__content {
+  max-width: 100px;
+}
+.feature__name {
+  height: 30px;
+  font-size: 16px;
+  text-align: center;
+  font-weight: 500;
+  text-wrap: balance;
+  line-height: 1.3;
+}
+.contacts {
+  padding: 50px 0;
+}
+.contact {
+  background-color: #fff;
+  border-radius: 12px;
+  padding: 30px 15px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.contact__heading {
+  font-size: 24px;
+  color: var(--color-primario);
+  padding: 15px 0;
+  text-align: center;
+}
+.contact__text {
+  font-size: 18px;
+  text-align: center;
+  text-wrap: balance;
+}
+.contact__form {
+  padding: 20px 0;
+}
+.contact__form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact__conditions {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 25px 0;
+}
+.contact__conditions label {
+  font-size: 16px;
+  text-wrap: balance;
 }
 
-.promotions__button--aceptar{
-    background-color: green;
+.contact__row {
+  display: flex;
+  gap: 10px;
 }
-.promotions__button--cancelar{
-    background-color: red;
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+  width: 100%;
+  margin-top: 10px;
+  border: none;
+  border-bottom: 1px solid rgb(151, 151, 151);
+  padding: 10px 5px;
+  outline: none;
+}
+
+.contact__button {
+  padding: 5px 100px;
+  border-radius: 20px;
+  background-color: var(--color-base);
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
 }
