--- a/src/views/Nosotros/nosotros.css
+++ b/src/views/Nosotros/nosotros.css
@@ -1,3 +1,22 @@
-.about{
-    padding-top: 220px;
+main {
+    background-color: #F6F7F8;
+}
+
+.about {
+    padding: 270px 0 50px 0;
+}
+
+.about-container {
+    background-color: #fff;
+    border-radius: 10px;
+
+}
+
+.about__heading {
+    text-align: center;
+    background-color: #21388B;
+    color: var(--color-secundario);
+    font-size: 24px;
+    padding: 7px 0;
+    border-radius: 10px 10px 0 0;
 }
