--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -106,3 +106,44 @@
   font-weight: 600;
   background-color: #fff;
 }
+
+.cart-item{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 15px;
+  padding: 10px 0;
+  border-top: 1px solid #ccc;
+}
+.cart-item__content{
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+.cart-item__info{
+  display: inline-block;
+  padding-left: 9px;
+  vertical-align: middle;
+}
+.cart-item__price{
+  font-size: 18px;
+  font-weight: bold;
+  display: block;
+  padding: 5px 0;
+}
+.cart-item__image{
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.cart-item__nombre{
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+@media ( min-width: 1024px) {
+  .cart-item__nombre{
+    font-size: 16px;
+  }
+}
