--- a/src/views/Locals/locals.css
+++ b/src/views/Locals/locals.css
@@ -1,7 +1,5 @@
 .locals-background {
     background-color: #F6F7F8;
-    padding-top: 220px;
-
 }
 
 .locals__title {
@@ -53,7 +51,9 @@
     border-radius: 10px;
 }
 
-
+.locals__content{
+    padding: 30px 0;
+}
 @media (min-width: 1024px) {
     .locals__container {
         display: grid;
