--- a/src/views/Nosotros/nosotros.css
+++ b/src/views/Nosotros/nosotros.css
@@ -2,16 +2,10 @@ main {
     background-color: #F6F7F8;
 }
 
-.about {
-    padding: 270px 0 50px 0;
-}
-
-.about-container {
-    background-color: #fff;
+.about__container {
     border-radius: 10px;
-
+    background-color: #fff;
 }
-
 .about__heading {
     text-align: center;
     background-color: #21388B;
@@ -19,4 +13,7 @@ main {
     font-size: 24px;
     padding: 7px 0;
     border-radius: 10px 10px 0 0;
+}
+.about__content{
+    padding: 30px 0;
 }
