--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -82,3 +82,87 @@
 .banner{
     width: 100%;
 }
+/*Card 1*/
+
+/* .promocion{
+    border-radius: 15px;
+    box-shadow: 0px 2px 10px -4px black;
+    min-height: 300px;
+    height: 100%;
+    border: 3px solid #fff;
+    max-width: 300px;
+} */
+
+.card-type2{
+    cursor: pointer;
+    box-shadow: 0px 2px 10px -4px black;
+    border-radius: 15px;
+    display: flex;
+}
+
+.card-type2_imagen{
+    order: 1;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 0  15px 15px 0;
+    display: flex;
+    align-items: center;
+    height: 255px;
+}
+.card-type2_nombre{
+    font-size: 23px;
+    padding: 14px 0;
+}
+.card-type2 img{
+    height: 255px;
+    width: 100%;
+    object-fit: cover;
+    overflow: hidden;
+    transition: all .4s;
+}
+.card-type2 img:hover{
+   transform: scale(1.1);
+}
+.card-type2_content{
+    
+    display: flex;
+    flex-direction: column;
+    padding: 10px 15px;
+}
+.card-type2_descripcion{
+    font-family: Kulturista, sans-serif;
+    height: 36px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 10px;
+    font-size: 15px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    width: 100%;
+}
+.card-type2__precio{
+    display: flex;
+    align-items: center;
+    padding: .5rem 0 1rem;
+    font-size: 1.7em;
+    gap: 1rem;
+}
+
+.card-type2__precio-actual{
+    font-size: 27px;
+    font-weight: bold;
+}
+.card-type2__precio-antiguo{
+    font-weight: bold;
+    color: #ec0b0b;
+    text-decoration: line-through;
+}
+.card-type2__boton{
+    border-radius: 12px;
+    width: 100%;
+    background-color: #193694;
+    color: #fff;
+    font-size: 1.7rem;
+    font-weight: 600;
+}
