--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -141,6 +141,46 @@
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
 }
+.cart-item__actions{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.cart-item__actions span{
+  font-size: 12px;
+  font-weight: bold;
+}
+.cart-item__button{
+  width: 25px;
+  height: 25px;
+  margin: auto 0;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.1;
+  border: 1px solid #ccc;
+  border-radius: 9px;
+  outline: 0;
+  background-color: #fff;
+  cursor: pointer;
+}
+.cart__title{
+  font-size: 18px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 15px 0 0 0;
+}
+.cart__subtitle{
+  font-size: 16px;
+  text-align: center;
+  padding: 10px 20px;
+  max-width: 400px;
+  margin: 0 auto;
+}
+.cart__subtitle strong{
+  color: var(--color-base);
+  cursor: pointer;
+}
 
 @media ( min-width: 1024px) {
   .cart-item__nombre{
