--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -204,26 +204,30 @@ header {
     display: block;
     width: 100px;
 }
+
+.drawer__buton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.drawer__buton button{
+    text-transform: uppercase;
+    padding: 10px 120px;
+    background-color: var(--color-base);
+    color: #fff;
+    border-radius: 20px;
+    font-size: 18px;
+}
 .drawer{
-    position: fixed;
+    display: none;
+    position: sticky;
     width: 100%;
     z-index: 10;
     bottom: 0;
     background-color: #fff;
     padding: 10px 0;
     transition: all .3s ease;
-}
-.drawer__buton{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.drawer__buton button{
-    padding: 10px 150px;
-    background-color: var(--color-primario);
-    color: #fff;
-    border-radius: 50px;
-    font-size: 24px;
 }
 @media ( min-width: 1024px  ) {
     .header____logo img{
@@ -235,6 +239,9 @@ header {
     }
     .header__horarios  p {
         font-size: 16px;
+    }
+    .drawer{
+       display: block;
     }
 }
 
