--- a/src/index.css
+++ b/src/index.css
@@ -1,55 +1,68 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap");
 
 *,
 *::after,
 *::before {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --color-primario: #011689;
-    --color-base: #173083;
-    --color-secundario: #FBB905;
-    --color-rojo-primario: #E10B19;
+  --color-primario: #011689;
+  --color-base: #173083;
+  --color-secundario: #fbb905;
+  --color-rojo-primario: #e10b19;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
-    margin: 0 auto;
-    width: 1200px;
-    max-width: 98%;
+  margin: 0 auto;
+  width: 1100px;
+  max-width: 98%;
 }
 
 button {
-    cursor: pointer;
-    border: none;
-    font-family: 'Oswald', sans-serif;
+  cursor: pointer;
+  border: none;
+  font-family: "Oswald", sans-serif;
 }
-.banner__dots{
-    z-index: 2;
+button:disabled{
+  background-color: #c5c6c6;
 }
-
-.page__wrapper{
-    padding-top: 141px;
-}
-
-@media ( min-width: 1024px ) {
-    .page__wrapper{
-        padding-top: 220px;
-    }
+.banner__dots {
+  z-index: 2;
 }
 
+.page__wrapper {
+  padding-top: 139px;
+}
+
+@media (min-width: 1024px) {
+  .page__wrapper {
+    padding-top: 220px;
+  }
+}
+
+.swiper-pagination-bullet {
+  background-color: #c5c6c6;
+  bottom: 10px;
+  width: 21px;
+  border-radius: 0;
+}
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background-color: var(--color-base);
+}
