--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,13 @@ button:disabled{
   color: #fff;
   background-color: var(--color-base);
 }
+
+*::-webkit-scrollbar {
+  width: 1em;
+  height: 8px;
+  background-color: #ccc;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: var(--color-base);
+  border-radius: 30px;
+}
