--- a/src/views/Producto/producto.css
+++ b/src/views/Producto/producto.css
@@ -36,9 +36,10 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 90vh;
+    height: 91vh;
     position: absolute;
     width: 100%;
+    z-index: 2;
 }
 .details__content{
     display: flex;
