--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,8 +1,8 @@
 .promocion{
     border-radius: 15px;
     box-shadow: 0px 2px 10px -4px black;
-    min-height: 300px;
     height: 100%;
+    max-height: 430px;
     border: 3px solid #fff;
     max-width: 300px;
 }
@@ -20,6 +20,7 @@
     grid-template-rows: 1fr auto 1fr;
     padding: 10px 15px 15px;
     text-align: center;
+    justify-content: center;
 }
 .menu_nombre{
     min-height: 73px;
