--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'din1451';
-  src: url('/src/fonts/DIN\ Engschrift\ Std-normal-400-100.ttf');
+  src: url('/src/fonts/DIN-Engschrift-Std-normal-400-100.ttf');
 }
 @font-face {
   font-family: 'Kulturista';
