--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -5,22 +5,24 @@
     max-height: 430px;
     border: 3px solid #fff;
     max-width: 300px;
+    overflow: hidden;
 }
 .promocion_nombre{
     color: #030819;
-    font-size: 23px;
+    font-size: 17px;
     line-height: 22px;
+    font-weight: bold;
     margin: auto;
     padding-left: 5px;
     display: inline-block;
     text-decoration: none;
+   
 }
 .menu_content{
     display: grid;
     grid-template-rows: 1fr auto 1fr;
     padding: 10px 15px 15px;
     text-align: center;
-    justify-content: center;
 }
 .menu_nombre{
     min-height: 73px;
@@ -78,6 +80,8 @@
     color: #fff;
     font-size: 1.7rem;
     font-weight: 600;
+    display: block;
+    width: 100%;
 }
 
 .banner{
