--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -1,9 +1,7 @@
-.cart {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-}
+
 .cart__list{
-  height: 500px;
   overflow: auto;
+  height: 370px;
 }
 .cart-heading {
   background-color: #e8e8e8;
@@ -48,7 +46,6 @@
 
 .cart__content-empty {
   font-size: 18px;
-  font-family: "Oswald", sans-serif;
   color: #ccc;
 }
 
@@ -86,7 +83,7 @@
   border: 2px solid #808080;
   color: #fff;
   text-transform: uppercase;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: Kulturista;
   font-weight: 600;
   font-size: 13px;
 }
@@ -95,8 +92,15 @@
   background-color: var(--color-rojo-primario);
   border: none;
 }
-
+.cart__button-price{
+  font-family: Kulturista;
+}
+.cart__button-name{
+  font-family: Kulturista;
+}
 .cart__button-count {
+  
+  font-family: Kulturista;
   background-color: #fff;
   color: black;
   border-radius: 50%;
@@ -110,8 +114,9 @@
   border: 2px solid var(--color-rojo-primario);
   color: var(--color-rojo-primario);
   text-transform: uppercase;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: Kulturista;
   font-weight: 600;
+  font-size: 13px;
   background-color: #fff;
 }
 
@@ -146,8 +151,8 @@
   border-radius: 10px;
 }
 .cart-item__nombre{
+  font-family: Kulturista;
   font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
 }
 .cart-item__actions{
   display: flex;
@@ -221,4 +226,5 @@
   .cart-item__nombre{
     font-size: 16px;
   }
+ 
 }
