--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -1,12 +1,13 @@
 .sidebar{
     position: fixed;
     top: 0;
-    left: -101%;
+    left: -100%;
     width: 100%;
     height: 100%;
     z-index: 20;
     display: flex;
-    transition: all .4s ;
+    transition: left 0.3s ease, transform 0.3s ease; 
+    transform: translateZ(0);
 }
 .sideber__menu-active{
     left: 0;
